<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opentelemetry_vendor</name>
  <version>1.21.0</version>
  <description>Vendor package for opentelemetry-cpp</description>

  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ros_industrial_cmake_boilerplate</buildtool_depend>
  <build_depend>python3-pip</build_depend>

  <depend>libgrpc++-dev</depend>
  <depend>protobuf-compiler-grpc</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>